[workspace]
resolver = "2"
members = [
  "ivy-syntax",
  "ivy-parse",
  "ivy-types",
  "ivy-eval",
  "ivy",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Gerardo Torres Castro"]

[workspace.dependencies]
ivy-syntax = { path = "ivy-syntax" }
ivy-parse = { path = "ivy-parse" }
ivy-types = { path = "ivy-types" }
ivy-eval = { path = "ivy-eval" }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
colored = "2"
rustyline = "14"
rand = "0.8"
