[package]
name = "ivy-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tree-walking interpreter for Ivy"

[dependencies]
ivy-syntax.workspace = true
ivy-parse.workspace = true
thiserror.workspace = true
miette.workspace = true
rand.workspace = true
