[package]
name = "ivy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "The Ivy programming language"

[[bin]]
name = "ivy"
path = "src/main.rs"

[dependencies]
ivy-syntax.workspace = true
ivy-parse.workspace = true
ivy-types.workspace = true
ivy-eval.workspace = true
rustyline.workspace = true
colored.workspace = true
miette.workspace = true
thiserror.workspace = true
